bug 152279:Transport shouldn't fire status and progress after stop button been clicked for stopping a document load patch=antonio.xu@sun.com r=jkeiser@netscape.com sr=darin@netscape.com